--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "convolve",
+  "name": "component-convolve",
   "description": "Canvas convolution filters",
   "version": "0.1.0",
-  "keywords": ["canvas", "sharpen", "blur", "edges"],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/component/convolve.git"
-  },
-  "dependencies": {},
-  "development": {},
-  "main": "index.js"
+  "keywords": [
+    "canvas",
+    "sharpen",
+    "blur",
+    "edges"
+  ],
+  "dependencies": {}
 }
